--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,4 @@
 $first-color: #0984e3;
-$second-color: #0984e3d1;
-$third-color: #dfe6e9;
+$second-color: #D9D121;
+$main-btn-color: #175673;
+$font-color: #fff;
