--- a/sass/style.scss
+++ b/sass/style.scss
@@ -79,7 +79,7 @@ html {
         align-items: center;
 
         .input-add-task {
-            width: 350px;
+            width: 550px;
             height: 38px;
             padding: 5px 10px;
             font-size: 0.8rem;
@@ -104,7 +104,6 @@ html {
     }
     ul {
         padding: 0;
-        width: 410px;
 
         li {
             list-style-type: none;
@@ -119,7 +118,7 @@ html {
                 &:hover {
                     cursor: pointer;
                     transform: scale(1.2);
-                    color: #b5561f;
+                    color: #ff8100;
                 }
             }
 
@@ -145,6 +144,7 @@ html {
                 border: none;
                 font-size: 0.8rem;
                 transition: 0.5s;
+                width: 70px;
                 &:hover {
                     cursor: pointer;
                     transform: scale(1.1);
@@ -158,6 +158,27 @@ html {
                 border: none;
                 color: #fff;
                 font-size: 0.8rem;
+            }
+
+            .btn-move {
+                border: none;
+                margin-left: 10px;
+                padding: 7px 10px;
+                border-radius: 5px;
+                color: #fff;
+                background-color: #07be83;
+                border: none;
+                font-size: 0.8rem;
+                transition: 0.5s;
+                width: 70px;
+                &:hover {
+                    cursor: pointer;
+                    transform: scale(1.1);
+                }
+            }
+
+            .btn-down {
+                background-color: $main-btn-color;
             }
         }
     }
